Updating the HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <h2 data-testid="fullname">Somtoochukwu Okonkwo</h2> 
      <h3 data-testid="jobTitle">Frontend Developer</h3>
      <p data-testid="shortbio">
-        Aspiring Frontend Developer with keen interest in building responsive and user-friendly web applications.
+        Frontend Developer with keen interest in building responsive and user-friendly web applications.
      </p>
      <p data-testid="currentlocation">Lagos, Nigeria</p>
      <p data-testid="emailAddress">somtoochukwuhilary@gmail.com</p>
